================================================
|                Version 0.4                   |
================================================
 - In-game comic book objects (items);
 - Tutorial to the battle system (as a comic book);
 - Fixed a bug at sound controller when exiting game;
 - Fixed a bug at some models reflexion;

Working on:
 - Weather effects;
 - Shadows;
 - Use dntMapEditor to insert sound effects at maps;

Pending:
 - New Effects for Comic Books Boxes;
 - Define Counter Skills;
 - Minimap Tags;
 - Extend walls to follow map height;
 - Define paths to improve the A* at outdoor maps;
 - Put Lights on MapEditor;
 - Implement 5-15% of the talents defined on DNT Book;
 - Score at Death Screen;
 - Capacity of using talents;

================================================
|               Version 0.3.2                  |
================================================
 - Fixed a bug on saveWindow when saving over an existent save file;
 - Fixed a bug on script's interpreter of "else if" jumps;
 - Fixed a bug that keeps dead characters alive after save file load;
 - Fixed mouse 3d world projection outside the indoor map limits;
 - Fixed the text input on saveWindow (was too slow);
 - Fixed a bug of losing the equipped weapon after loading save file;
 - Fixed for Santa model completly finish the die animation;
 - Fixed to update health bar after load save file;
 - Showing "Mission Failure!" at 3D messages (not only on briefing) 
   when fail to complete a mission.

================================================
|               Version 0.3.1                  |
================================================
 - Running Animation/Action/Option for Playable Characters;
 - Anisotropic Texture Filtering;

================================================
|                Version 0.3                   |
================================================
 - Briefing now has its own window; 
 - Added icons to menus;
 - Fixed a bug for inventory menu limits;